# redirect

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker.env  log.txt  main.py  postgres.env.example  postgres.speed  pyproject.toml  redirect.json  reports  sqlite.env.example  sqlite.speed  sqlite3.env
db/: __init__.py  redirect.db
routes/: redirect.py
src/: main.rs  sqls.sql
src/data/: sqls.sql
src/routes/: mod.rs  redirect.rs  types.rs
