[package]
name = "redirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-utils = "3.0.1"
actix-web = "4.3.1"
async-stream = "0.3.5"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
rusqlite = "0.29.0"
serde = "1.0.164"
serde_derive = "1.0.164"
tokio = {version = "1.29.1", features = ["sync"]}
tokio-postgres = "0.7.8"
tokio-rusqlite = "0.4.0"
uuid = {version = "1.4.0", features = ["v4"]}
