[tool.poetry]
name = "timelessnesses-api-redirect"
version = "0.1.0"
description = "Redirector"
authors = ["Rukchad Wongprayoon <timelessnesses@timelessnesses.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.96.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
asyncpg = "^0.27.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
